# TUM_ICS_RoboCupHome

./: readme.md  test.md
configuration/: package.xml
configuration/config/: motion_plan.rviz
pick_place/: CMakeLists.txt  package.xml
pick_place/include/pick_place/: pick.h  place.h
pick_place/src/: pick.cpp  place.cpp
pick_place/src/applications/: pick_node.cpp  place_node.cpp
tiago_localization/launch/config/: config.yaml
tiago_localization/src/: tiago_localization_node.cpp
tmc_wrs_gazebo_world/: ChangeLog.md
world/default_world/: submap_0.pgm
world/tutorial_office/: submap_0.pgm
